%[ER: 37]% Major overhaul of Parm/Polc

--- a/CEP/CPA/PSS4/MEQ/src/Makefile.am
+++ b/CEP/CPA/PSS4/MEQ/src/Makefile.am
@@ -35,16 +35,17 @@ check_PROGRAMS =
 #     (shouldn't require any changes)
 
 # this defines the name of the local defrec script
-DEFREC_MAP = $(srcdir)/defrecs_$(PACKAGE).g parmtable.g
+DEFREC_MAP = $(srcdir)/defrecs_$(PACKAGE).g
 
 # this rule shouldn't require any changes
 MAKEDEFREC = $(lofar_sharedir)/../CEP/CPA/PSS4/MEQ/src/makedefrecs.pl
 $(DEFREC_MAP): $(DOCHDRS) $(MAKEDEFREC)
 	$(MAKEDEFREC) $@ $(addprefix $(srcdir)/,$(DOCHDRS))
+# ---------
   
 # place scripts into libexec/glish/meq
 glishdir = $(libexecdir)/glish/meq
-dist_glish_SCRIPTS = $(DEFREC_MAP)
+dist_glish_SCRIPTS = $(DEFREC_MAP) parmtable.g
 
 defrecs: $(DEFREC_MAP)
 
