--- a/CEP/CEPFrame/configure.in
+++ b/CEP/CEPFrame/configure.in
@@ -60,6 +60,7 @@ lofar_MPI
 lofar_QATOOLS
 lofar_DOCXX
 lofar_PACKAGE(LCS/Common)
+lofar_EXTERNAL(psql,0,libpq-fe.h,pq)
 
 dnl
 dnl Output Makefiles
