--- a/trunk/MAC/GCF/_CoreComps/TM/test/Makefile.am
+++ b/trunk/MAC/GCF/_CoreComps/TM/test/Makefile.am
@@ -3,17 +3,22 @@ check_PROGRAMS 		= echoapp ping
 TESTS			= #echoapp ping
 
 echoapp_SOURCES 		= Echo.cc 
-echoapp_LDADD		= ../src/libtm.la
-echoapp_DEPENDENCIES	= ../src/libtm.la $(LOFAR_DEPEND)
+echoapp_LDADD		= ../src/libtm.la \
+	$(top_builddir)/GCFCommon/src/libgcfcommon.la
+echoapp_DEPENDENCIES	= ../src/libtm.la $(LOFAR_DEPEND) \
+	$(top_builddir)/GCFCommon/src/libgcfcommon.la
+
 
 ping_SOURCES 		= Ping.cc 
-ping_LDADD		= ../src/libtm.la
-ping_DEPENDENCIES	= ../src/libtm.la $(LOFAR_DEPEND)
+ping_LDADD		= ../src/libtm.la \
+	$(top_builddir)/GCFCommon/src/libgcfcommon.la
+ping_DEPENDENCIES	= ../src/libtm.la $(LOFAR_DEPEND) \
+	$(top_builddir)/GCFCommon/src/libgcfcommon.la
 
 AUTOGEN = autogen
 SUFFIXES = .ph
 %.ph: %.prot
-	$(AUTOGEN) -L $(top_srcdir)/../../GCFCommon/autogen $< && \
+	$(AUTOGEN) -L $(top_srcdir)/GCFCommon/autogen $< && \
 	chmod a+w $@
 
 BUILT_SOURCES = \
