--- a/MAC/GCF/Services/PI/src/Makefile.am
+++ b/MAC/GCF/Services/PI/src/Makefile.am
@@ -1,7 +1,7 @@
 AUTOGEN = autogen
 SUFFIXES = .ph
 %.ph: SS/%.prot
-	$(AUTOGEN) -L $(top_srcdir)/../../GCFCommon/autogen $< && \
+	$(AUTOGEN) -L $(top_srcdir)/GCFCommon/autogen $< && \
 	chmod a+w $@
 
 DOCHDRS	=	\
@@ -34,15 +34,34 @@ libpi_la_SOURCES= $(DOCHDRS) \
   SS/FPDoubleValue.cc \
   SS/FPStringValue.cc \
   SS/FPDynArrValue.cc
+  
+libpi_la_CPPFLAGS= -I$(top_srcdir)/GCFCommon/src \
+	-I$(top_srcdir)/CoreComps/TM/src \
+	-I$(top_srcdir)/CoreComps/SAL/src \
+	-I$(top_srcdir)/CoreComps/PA/src \
+	-I$(top_builddir)/CoreComps/PA/src
 
 bin_PROGRAMS   		= PropertyInterface
   
-PropertyInterface_SOURCES		    = GPI_Main.cc
-PropertyInterface_LDADD		      = libpi.la 
-PropertyInterface_DEPENDENCIES	= libpi.la $(LOFAR_DEPEND)
+PropertyInterface_SOURCES		= GPI_Main.cc
+PropertyInterface_LDADD		      	= libpi.la  \
+	$(top_builddir)/CoreComps/PML/src/libpml.la \
+	$(top_builddir)/CoreComps/TM/src/libtm.la \
+	$(top_builddir)/CoreComps/SAL/src/libsal.la \
+	$(top_builddir)/GCFCommon/src/libgcfcommon.la
+	
+PropertyInterface_DEPENDENCIES	= libpi.la \
+	$(top_builddir)/CoreComps/PML/src/libpml.la \
+	$(top_builddir)/GCFCommon/src/libgcfcommon.la \
+	$(top_builddir)/CoreComps/TM/src/libtm.la \
+	$(top_builddir)/CoreComps/SAL/src/libsal.la \
+	$(LOFAR_DEPEND) 
 
 BUILT_SOURCES = \
-	F_Supervisory_Protocol.ph
+	F_Supervisory_Protocol.ph \
+	mac.ns \
+	mac.top \
+	log4cplus.properties
 
 EXTRA_DIST = \
 	F_Supervisory_Protocol.ph \
