--- a/MAC/GCF/_CoreComps/PA/src/Makefile.am
+++ b/MAC/GCF/_CoreComps/PA/src/Makefile.am
@@ -1,7 +1,7 @@
 AUTOGEN = autogen
 SUFFIXES = .ph
 %.ph: %.prot
-	$(AUTOGEN) -L $(top_srcdir)/../../GCFCommon/autogen $< && \
+	$(AUTOGEN) -L $(top_srcdir)/GCFCommon/autogen $< && \
 	chmod a+w $@
 
 DOCHDRS	=	\
@@ -10,7 +10,7 @@ DOCHDRS	=	\
 	GPA_UsecountManager.h \
 	GPA_RequestManager.h \
 	GPA_Defines.h \
-	GPA_APC.h
+	GPA_APCFileReader.h
 
 noinst_LTLIBRARIES 	= libpa.la
 
@@ -19,13 +19,24 @@ libpa_la_SOURCES= $(DOCHDRS) \
 	GPA_ScopeManager.cc \
 	GPA_UsecountManager.cc \
 	GPA_RequestManager.cc \
-	GPA_APC.cc
+	GPA_APCFileReader.cc
+	
+libpa_la_CPPFLAGS= -I$(top_srcdir)/GCFCommon/src \
+	-I$(top_srcdir)/CoreComps/TM/src \
+	-I$(top_srcdir)/CoreComps/SAL/src
 
 bin_PROGRAMS   		= PropertyAgent
   
-PropertyAgent_SOURCES		    = GPA_Main.cc
-PropertyAgent_LDADD		      = libpa.la 
+PropertyAgent_SOURCES		    	= GPA_Main.cc
+PropertyAgent_LDADD		     			= libpa.la \
+	$(top_builddir)/CoreComps/SAL/src/libsal.la \
+	$(top_builddir)/CoreComps/TM/src/libtm.la \
+	$(top_builddir)/GCFCommon/src/libgcfcommon.la
+	
 PropertyAgent_DEPENDENCIES	= libpa.la $(LOFAR_DEPEND)
+PropertyAgent_CPPFLAGS= -I$(top_srcdir)/GCFCommon/src \
+	-I$(top_srcdir)/CoreComps/TM/src \
+	-I$(top_srcdir)/CoreComps/SAL/src
 
 BUILT_SOURCES = \
 	PA_Protocol.ph \
