--- a/MAC/GCF/_CoreComps/PML/src/Makefile.am
+++ b/MAC/GCF/_CoreComps/PML/src/Makefile.am
@@ -1,31 +1,30 @@
-include_HEADERS = \
-	GCF_SupTask.h \
-	GCF_PropertyProxy.h 
+include_HEADERS = 
 
 DOCHDRS	=	$(include_HEADERS) \
 	GPM_Controller.h \
-	GPM_Property.h \
-	GPM_PropertySet.h \
-	GPM_PropertyProxy.h \
-	GPM_Service.h \
+	GPM_PropertyService.h \
 	GPM_Defines.h
     
-lib_LTLIBRARIES 	= libgcf.la libpml.la
+noinst_LTLIBRARIES 	= libpml.la
 
 libpml_la_SOURCES= $(DOCHDRS) \
+	GCF_PropertyBase.cc \
+	GCF_Property.cc \
+	GCF_MyProperty.cc \
+	GCF_PropertySetBase.cc \
+	GCF_PropertySet.cc \
+	GCF_MyPropertySet.cc \
+	GCF_Apc.cc \
+	GCF_Answer.cc \
 	GPM_Controller.cc \
-	GCF_SupTask.cc \
-	GPM_Property.cc \
-	GPM_PropertySet.cc \
-	GPM_PropertyProxy.cc \
-	GCF_PropertyProxy.cc \
-	GPM_Service.cc 
+	GPM_PropertyService.cc \
+	GCF_PropertyProxy.cc
 
-libgcf_la_SOURCES = 
-libgcf_la_LIBADD= libpml.la \
-	../../../../TM/build/gnu_debug/src/libtm.la \
-	../../../../SAL/build/gnu_debug/src/libsal.la \
-	../../../../../GCFCommon/build/gnu_debug/src/libgcfcommon.la
+libpml_la_CPPFLAGS= -I$(top_srcdir)/GCFCommon/src \
+	-I$(top_srcdir)/CoreComps/TM/src \
+	-I$(top_srcdir)/CoreComps/SAL/src \
+	-I$(top_srcdir)/CoreComps/PA/src \
+	-I$(top_builddir)/CoreComps/PA/src
 	
 include $(lofar_sharedir)/Makefile.common
 
