--- a/MAC/GCF/_CoreComps/SAL/src/Makefile.am
+++ b/MAC/GCF/_CoreComps/SAL/src/Makefile.am
@@ -1,12 +1,4 @@
-include_HEADERS = \
-	GCF_PValue.h \
-	GCF_PVBool.h \
-	GCF_PVDouble.h \
-	GCF_PVInteger.h \
-	GCF_PVUnsigned.h \
-	GCF_PVString.h \
-	GCF_PVChar.h \
-	GCF_PVDynArr.h 
+include_HEADERS = 
 
 DOCHDRS	=	$(include_HEADERS) \
 	GSA_SCADAHandler.h \
@@ -16,7 +8,7 @@ DOCHDRS	=	$(include_HEADERS) \
 	GSA_WaitForAnswer.h \
 	GSA_Defines.h
     
-lib_LTLIBRARIES 	= libsal.la
+noinst_LTLIBRARIES 	= libsal.la
 
 libsal_la_SOURCES= $(DOCHDRS) \
 	GSA_SCADAHandler.cc \
@@ -32,6 +24,8 @@ libsal_la_SOURCES= $(DOCHDRS) \
 	GCF_PVChar.cc \
 	GCF_PVDynArr.cc \
 	GSA_WaitForAnswer.cc
-
+libsal_sa_CPPFLAGS=-I$(top_srcdir)/GCFCommon/src \
+	-I$(top_srcdir)/CoreComps/TM/src
+	
 include $(lofar_sharedir)/Makefile.common
 
