--- a/trunk/MAC/Test/GCF/configure.in
+++ b/trunk/MAC/Test/GCF/configure.in
@@ -56,7 +56,8 @@ lofar_QATOOLS
 lofar_DOCXX
 lofar_MPI(0)
 lofar_PVSS(1)
-lofar_PACKAGE(MAC/GCF/CoreComps/PML)
+lofar_PACKAGE(MAC/Tools/LofarLogger)
+lofar_EXTERNAL(gcf,1,GCF/GCF_Task.h,,~/workspace3/LOFAR/installed/gnu_debug)
                        
 dnl
 dnl Output Makefiles
