--- a/trunk/MAC/Tools/LofarLogger/configure.in
+++ b/trunk/MAC/Tools/LofarLogger/configure.in
@@ -56,7 +56,7 @@ lofar_QATOOLS
 lofar_DOCXX
 lofar_MPI(0)
 lofar_PACKAGE(LCS/Common)
-lofar_EXTERNAL(log4cplus,1,log4cplus/logger.h,,)
+lofar_EXTERNAL(log4cplus,1,log4cplus/logger.h,log4cplus,)
 
 dnl
 dnl Output Makefiles
