--- a/MAC/Tools/LofarLogger/src/Makefile.am
+++ b/MAC/Tools/LofarLogger/src/Makefile.am
@@ -1,7 +1,10 @@
-DOCHDRS	=	\
+pkginclude_HEADERS = \
   LofarLogger.h \
   LofarLoggerNames.h
 
+DOCHDRS	=	\
+	$(pkginclude_HEADERS)
+	
 lib_LTLIBRARIES 	= liblofarlogger.la
 
 liblofarlogger_la_SOURCES= $(DOCHDRS) \
