%[ER: 81]% - Created separate solution object - Can now be used with 10 sources (30 parameters) - Removed blackboard 'cout's

--- a/CEP/BB/PSS3/src/Makefile.am
+++ b/CEP/BB/PSS3/src/Makefile.am
@@ -1,13 +1,13 @@
 bin_PROGRAMS	= BlackBoardDemo
 
 DOCHDRS 	=				\
-DH_Parms.h					\
+DH_Solution.h					\
 DH_WorkOrder.h					\
 WH_Evaluate.h					\
 WH_PSS3.h					\
 WH_Connection.h   				\
 BlackBoardDemo.h				\
-Solution.h					\
+Quality.h					\
 Strategy.h					\
 StrategyImpl.h					\
 SI_Peeling.h					\
@@ -16,13 +16,13 @@ Calibrator.h
 
 BlackBoardDemo_SOURCES  	= $(DOCHDRS)		\
 Simulate.cc						\
-DH_Parms.cc						\
+DH_Solution.cc						\
 DH_WorkOrder.cc						\
 WH_Evaluate.cc						\
 WH_PSS3.cc						\
 WH_Connection.cc					\
 BlackBoardDemo.cc					\
-Solution.cc						\
+Quality.cc						\
 Strategy.cc						\
 StrategyImpl.cc						\
 SI_Peeling.cc						\
