--- a/MAC/GCF/GCFCommon/src/Makefile.am
+++ b/MAC/GCF/GCFCommon/src/Makefile.am
@@ -1,12 +1,14 @@
 include_HEADERS =
 
 DOCHDRS	=	$(include_HEADERS) \
-	CmdLine.h 
+	CmdLine.h \
+	Utils.h
       
 noinst_LTLIBRARIES 	= libgcfcommon.la
 
 libgcfcommon_la_SOURCES= $(DOCHDRS) \
-	CmdLine.cc
+	CmdLine.cc \
+	Utils.cc
 
 include $(lofar_sharedir)/Makefile.common
 
