--- a/MAC/GCF/Services/PI/src/Makefile.am
+++ b/MAC/GCF/Services/PI/src/Makefile.am
@@ -1,6 +1,6 @@
 AUTOGEN = autogen
 SUFFIXES = .ph
-%.ph: SS/%.prot
+%.ph: %.prot
 	$(AUTOGEN) -L $(top_srcdir)/GCFCommon/autogen $< && \
 	chmod a+w $@
 
@@ -9,15 +9,7 @@ DOCHDRS	=	\
   GPI_Controller.h \
   GPI_SupervisoryServer.h \
   GPI_PropertyProxy.h \
-  SS/FProperty.h \
-  SS/FPValue.h \
-  SS/FPBoolValue.h \
-  SS/FPCharValue.h \
-  SS/FPIntegerValue.h \
-  SS/FPUnsignedValue.h \
-  SS/FPDoubleValue.h \
-  SS/FPStringValue.h \
-  SS/FPDynArrValue.h
+  GPI_PropertySet.h
     
 noinst_LTLIBRARIES 	= libpi.la
 
@@ -25,15 +17,7 @@ libpi_la_SOURCES= $(DOCHDRS) \
   GPI_Controller.cc \
   GPI_SupervisoryServer.cc \
   GPI_PropertyProxy.cc \
-  SS/FProperty.cc \
-  SS/FPValue.cc \
-  SS/FPBoolValue.cc \
-  SS/FPCharValue.cc \
-  SS/FPIntegerValue.cc \
-  SS/FPUnsignedValue.cc \
-  SS/FPDoubleValue.cc \
-  SS/FPStringValue.cc \
-  SS/FPDynArrValue.cc
+  GPI_PropertySet.cc
   
 libpi_la_CPPFLAGS= -I$(top_srcdir)/GCFCommon/src \
 	-I$(top_srcdir)/CoreComps/TM/src \
@@ -58,13 +42,13 @@ PropertyInterface_DEPENDENCIES	= libpi.la \
 	$(LOFAR_DEPEND) 
 
 BUILT_SOURCES = \
-	F_Supervisory_Protocol.ph \
+	PI_Protocol.ph \
 	mac.ns \
 	mac.top \
 	log4cplus.properties
 
 EXTRA_DIST = \
-	F_Supervisory_Protocol.ph \
+	PI_Protocol.ph \
 	mac.ns \
 	mac.top \
 	log4cplus.properties
