--- a/trunk/autoconf_share/doxygen.cfg
+++ b/trunk/autoconf_share/doxygen.cfg
@@ -10,6 +10,8 @@ ALIASES		= "template=\par Template requirements:\n"
 MAX_INITIALIZER_LINES	= 0
 WARNINGS		= YES
 WARN_IF_UNDOCUMENTED	= NO
+EXCLUDE_PATTERNS        = */build/* */demo/* */test/*
+EXCLUDE_SYMLINKS        = YES
 FILE_PATTERNS		= *.h *.idl
 FILTER_SOURCE_FILES   = YES
 INPUT_FILTER          = /home/lofar/weekly/LOFAR/autoconf_share/slash2spanning.pl
