--- a/LCS/databases/PL/test/Makefile.am
+++ b/LCS/databases/PL/test/Makefile.am
@@ -56,7 +56,8 @@ tQuery_DEPENDENCIES		= ../src/libpl.la $(LOFAR_DEPEND)
 
 TESTS			= \
 			  tExpr.sh \
-			  tAttrib.sh
+			  tAttrib.sh \
+			  tQuery.sh
 #			  tSQLTimeStamp.sh
 
 TESTS_ENVIRONMENT	= lofar_sharedir=$(lofar_sharedir)
