--- a/trunk/MAC/APL/PAC/_VirtualTelescope/src/Makefile.am
+++ b/trunk/MAC/APL/PAC/_VirtualTelescope/src/Makefile.am
@@ -6,8 +6,11 @@ SUFFIXES = .ph
 
 DOCHDRS	=	\
 	AVTAPCAnswer.h \
+	AVTAPCAnswerHandlerInterface.h \
 	AVTLogicalDevice.h \
+	AVTLogicalDeviceScheduler.h \
 	AVTPropertySetAnswer.h \
+	AVTPropertySetAnswerHandlerInterface.h \
 	AVTStationBeamformer.h \
 	AVTVirtualTelescope.h
 
@@ -16,6 +19,7 @@ noinst_LTLIBRARIES 	= libvirtualtelescope.la
 libvirtualtelescope_la_SOURCES= $(DOCHDRS) \
 	AVTAPCAnswer.cc \
 	AVTLogicalDevice.cc \
+	AVTLogicalDeviceScheduler.cc \
 	AVTPropertySetAnswer.cc \
 	AVTStationBeamformer.cc \
 	AVTVirtualTelescope.cc
