%[ER:97]% Continued work on BeamServerTask and its testing.

--- a/MAC/APL/PAC/BeamServer/src/Makefile.am
+++ b/MAC/APL/PAC/BeamServer/src/Makefile.am
@@ -7,12 +7,14 @@ SUFFIXES = .ph
 
 BUILT_SOURCES = \
 	ABS_Protocol.ph \
+	EPA_Protocol.ph \
 	log4cplus.properties \
 	abs.ns \
 	abs.top
 
 EXTRA_DIST = \
 	ABS_Protocol.ph \
+	EPA_Protocol.ph \
 	log4cplus.properties \
 	abs.ns \
 	abs.top
