%[ER:97]% Contd. development, start writing test programs.

--- a/MAC/APL/PAC/BeamServer/test/Makefile.am
+++ b/MAC/APL/PAC/BeamServer/test/Makefile.am
@@ -1,15 +1,61 @@
 
-AM_CXXFLAGS = -I$(top_srcdir)/src
+AM_CXXFLAGS = \
+	-I$(top_srcdir)/src \
+	-I$(top_builddir)/src \
+	-I$(top_srcdir)/test \
+	-I$(top_srcdir)/../../APLCommon/src
 
-check_PROGRAMS = BeamServerTest
+TESTS = \
+	BeamServerTest
+
+noinst_LTLIBRARIES = libunittest.la
+
+libunittest_la_SOURCES = \
+	$(top_srcdir)/../../APLCommon/src/test.cpp \
+	$(top_srcdir)/../../APLCommon/src/suite.cpp
+
+check_PROGRAMS = \
+	BeamServerTest \
+	AVTStub \
+	EPAStub
 
 BeamServerTest_SOURCES = \
 	BeamServerTest.cc
 
 BeamServerTest_LDADD = \
-	$(top_builddir)/src/libabs.la
+	$(top_builddir)/src/libabs.la \
+	$(top_builddir)/test/libunittest.la
 
-TESTS = \
-	BeamServerTest
+AVTStub_SOURCES = \
+	ABSAVTStub.h \
+	ABSAVTStub.cc
+
+AVTStub_LDADD = \
+	$(top_builddir)/src/libabs.la \
+	$(top_builddir)/test/libunittest.la \
+	 -ltm -lgcfcommon
+
+EPAStub_SOURCES = \
+	ABSEPAStub.h \
+	ABSEPAStub.cc
+
+EPAStub_LDADD = \
+	$(top_builddir)/src/libabs.la \
+	$(top_builddir)/test/libunittest.la \
+	-ltm -lgcfcommon
+
+BUILT_SOURCES = \
+	log4cplus.properties \
+	abstest.ns \
+	abstest.top
+
+%.properties: $(MAC_CONFIG)/%.properties
+	cp $< $@
+
+%.ns: %.ns.in
+	cp $< $@
+
+%.top: %.top.in
+	cp $< $@
 
 include $(lofar_sharedir)/Makefile.common
