--- a/trunk/MAC/Tools/LofarLogger/configure.in
+++ b/trunk/MAC/Tools/LofarLogger/configure.in
@@ -55,7 +55,7 @@ lofar_DEBUG_OPTIMIZE
 lofar_QATOOLS
 lofar_DOCXX
 lofar_MPI(0)
-lofar_EXTERNAL(common,1,Common/LofarTypes.h,,~/workspace3/LOFAR/installed/gnu_debug)
+lofar_EXTERNAL(common,1,Common/LofarTypes.h,,)
 lofar_EXTERNAL(log4cplus,1,log4cplus/logger.h,,)
 
 dnl
